<resources>
    <!-- Titles -->
    <string name="app_name">Pub Golf</string>
    <string name="course_manager_title">Course Manager</string>
    <string name="course_editor_title">Course Editor</string>
    <string name="rules_manager_title">Rules Manager</string>
    <string name="rules_editor_title">Rules Editor</string>

    <!-- Menu Strings -->
    <string name="action_settings">Settings</string>
    <string name="action_save">SAVE</string>
    <string name="action_instructions">Instructions</string>
    <string name="action_delete">Delete</string>

    <!-- Launcher Page Card Texts -->
    <string name="card_play_golf_title">Play Pub Golf\!</string>
    <string name="card_play_golf_subtitle">Start a new round</string>
    <string name="card_scorecard_library_title">Scorecard Library</string>
    <string name="card_scorecard_library_subtitle">View historical scorecards</string>
    <string name="card_download_courses_title">Manage Courses</string>
    <string name="card_download_courses_subtitle">Download or create courses to play</string>
    <string name="card_custom_rules_title">Manage Rule Sets</string>
    <string name="card_custom_rules_subtitle">Edit or amend the default rules to suit your game</string>
    <!-- Dialog Texts -->
    <string name="dialog_new_round_title">New round</string>
    <string name="dialog_new_round_message">Do you want to create a new game, or to join an existing game\?</string>
    <string name="dialog_new_round_create">CREATE</string>
    <string name="dialog_new_round_join">JOIN</string>
    <string name="dialog_select_course_title">Select the course</string>
    <string name="dialog_add_players_title">Add players</string>
    <string name="dialog_add_players_subtitle">You can add or remove players later.\nPlayers filling their score in on their device are added separately.</string>
    <string name="dialog_add_players_hint">Player name…</string>
    <string name="dialog_add_players_empty_name_toast">Please enter a player name before adding another player</string>
    <string name="dialog_add_players_empty_name_toast_play">Please enter at least one player\'s name before starting a game</string>
    <string name="dialog_play">PLAY</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_save_rules_title">Exit without saving\?</string>
    <string name="dialog_save_rules_message">Are you sure you want to go back without saving the rules\?</string>
    <string name="dialog_save">SAVE</string>
    <string name="dialog_dont_save">DON\'T SAVE</string>
    <string name="dialog_keep_editing">KEEP EDITING</string>
    <string name="dialog_rule_editor_instructions_title">Instructions</string>
    <string name="dialog_rule_editor_instructions_message">To edit a rule, click on the text, and edit it as you desire.\n\nTo renumber a rule, long click its number and select a new one.\n\nClick save to keep the changes.</string>
    <string name="dialog_rule_delete">DELETE</string>
    <string name="dialog_rule_delete_title">Are you sure you want to delete this rule set\?</string>
    <!-- Nav Bar Entries -->
    <string name="navbar_scorecard">Scorecard</string>
    <string name="navbar_map">Course Map</string>
    <string name="navbar_rules">Rules</string>
    <string name="navbar_manage_course">Manage Course</string>
    <string name="navbar_communication_subtitle">Communication</string>
    <string name="navbar_invite_players">Invite Players</string>
    <string name="navbar_share">Share Scorecard</string>

    <!-- Footer buttons -->
    <string name="footer_button_scorecard">Scorecard</string>
    <string name="footer_button_map">Map</string>

    <!-- Scorecard Headers -->
    <array name="scorecard_headers">
        <item name="sc_header_number">Hole</item>
        <item name="sc_header_name">Establishment</item>
        <item name="sc_header_drink">Drink</item>
        <item name="sc_header_par">Par</item>
    </array>
    <string name="scorecard_total">Total:</string>

    <!-- Rules Manager -->
    <string name="rules_manager_standard_rules_subtitle">Standard rules from the Pub Golf Association.</string>
    <string name="rules_manager_available_rules">Available custom rule sets:</string>
    <string name="rules_manager_no_custom_sets">You have no custom rule sets saved. Edit the standard rules to create a new set.</string>
    <string name="rules_manager_default_toast">%1$s has been set as the default rules</string>


    <!-- Auto-created strings -->
    <string name="title_activity_home">Pub Golf</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_golf_round">GolfRoundActivity</string>

</resources>
