<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scorecard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navbar_scorecard" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navbar_map" />
    </group>
    <group>
        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navbar_rules" />
        <item
            android:id="@+id/nav_manage_course"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navbar_manage_course" />
        <item
            android:id="@+id/nav_manage_drinks"
            android:icon="@drawable/ic_menu_share"
            android:title="Share" />
    </group>

    <item android:title="@string/navbar_communication_subtitle">
        <menu>
            <item
                android:id="@+id/nav_add_players"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/navbar_invite_players" />
            <item
                android:id="@+id/nav_share_scorecard"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/navbar_share" />
        </menu>
    </item>

</menu>
